# Polycode

./: .gitignore  .gitmodules  .travis.yml  BUILD.md  BUILD.txt  BuildLinux.sh  BuildMac.sh  CMakeLists.txt  LICENSE.txt  README  Toolchain-mingw32.cmake  build.all.bat  build.core.bat  build.deps.bat  build.standalone.bat  index.html  params.json  rebuild.all.bat  rebuild.core-standalone.bat  setup-travis.sh
Bindings/Contents/: CMakeLists.txt
Bindings/Contents/LUA/: CMakeLists.txt
Bindings/Scripts/create_lua_library/: .create_lua_library.py.swp  CMakeLists.txt  CppHeaderParser3.py  Makefile  create_lua_library.py  zipfile.py
Core/: CMakeLists.txt
Core/Contents/: CMakeLists.txt
Core/Contents/Include/: OSBasics.h  PolyAGLCore.h  PolyBasics.h  PolyBezierCurve.h  PolyBone.h  PolyCamera.h  PolyClient.h  PolyCocoaCore.h  PolyColor.h  PolyConfig.h  PolyCore.h  PolyCoreInput.h  PolyCoreServices.h  PolyCubemap.h  PolyData.h  PolyEntity.h  PolyEvent.h  PolyEventDispatcher.h  PolyEventHandler.h  PolyFixedShader.h  PolyFont.h  PolyFontGlyphSheet.h  PolyFontManager.h  PolyGLCubemap.h  PolyGLES1Renderer.h  PolyGLES1Texture.h  PolyGLHeaders.h  PolyGLRenderer.h  PolyGLSLProgram.h  PolyGLSLShader.h  PolyGLSLShaderModule.h  PolyGLTexture.h  PolyGLVertexBuffer.h  PolyGPUDrawBuffer.h  PolyGenericScene.h  PolyGlobals.h  PolyHTTPFetcher.h  PolyImage.h  PolyInputEvent.h  PolyInputKeys.h  (+79 more)
Core/Contents/Source/: OSBasics.cpp  PolyAGLCore.cpp  PolyBezierCurve.cpp  PolyBone.cpp  PolyCamera.cpp  PolyClient.cpp  PolyCocoaCore.cpp  PolyCocoaCore.mm  PolyColor.cpp  PolyConfig.cpp  PolyCore.cpp  PolyCoreInput.cpp  PolyCoreServices.cpp  PolyCubemap.cpp  PolyData.cpp  PolyEntity.cpp  PolyEvent.cpp  PolyEventDispatcher.cpp  PolyEventHandler.cpp  PolyFixedShader.cpp  PolyFont.cpp  PolyFontGlyphSheet.cpp  PolyFontManager.cpp  PolyGLCubemap.cpp  PolyGLES1Renderer.cpp  PolyGLES1Texture.cpp  PolyGLRenderer.cpp  PolyGLSLProgram.cpp  PolyGLSLShader.cpp  PolyGLSLShaderModule.cpp  PolyGLTexture.cpp  PolyGLVertexBuffer.cpp  PolyGPUDrawBuffer.cpp  PolyGenericScene.cpp  PolyHTTPFetcher.cpp  PolyImage.cpp  PolyInputEvent.cpp  PolyLabel.cpp  PolyLogger.cpp  PolyLuaEventStuff.cpp  (+75 more)
Dependencies/: CMakeLists.txt
Dependencies/Local/libstem_gamepad/: CMakeLists.txt
Documentation/: CMakeLists.txt
Documentation/Doxygen/: Physics2D.doxygen  Physics3D.doxygen  Polycode.doxygen  Polycode_ui.doxygen  Polycode_web.doxygen  index.dox  indexModules.dox
Documentation/Doxygen/base/: footer.html  header.html
Documentation/Doxygen/html/: index.html
Documentation/Doxygen/latex/: index.tex  refman.tex
Documentation/Doxygen/tags/: README.txt
Documentation/Lua/scripts/: CMakeLists.txt  local_footer.html  local_header.html  make_html.py  site_footer.html  site_header.html
Documentation/Lua/xml/: README
Documentation/Misc/: binary_object.txt
Examples/C++/: CMakeLists.txt  Makefile  default.pak  main.cpp  run.anim
Examples/C++/2DShapes/: CMakeLists.txt  HelloPolycodeApp.cpp
Examples/C++/2DTransforms/: CMakeLists.txt  HelloPolycodeApp.cpp  HelloPolycodeApp.h
Examples/C++/3DAudio/: CMakeLists.txt  HelloPolycodeApp.cpp
Examples/C++/AdvancedLighting/: CMakeLists.txt  HelloPolycodeApp.cpp
Examples/C++/BasicImage/: CMakeLists.txt  HelloPolycodeApp.cpp
Examples/C++/BasicLighting/: CMakeLists.txt  HelloPolycodeApp.cpp
Examples/C++/BasicText/: CMakeLists.txt  HelloPolycodeApp.cpp
Examples/C++/Resources/: default.pak  dummy.skeleton  example.mat  idle.anim  ninja.mesh  ninja.skeleton  run.anim  sprite_set.sprites
Examples/C++/ScreenEntities/: CMakeLists.txt  HelloPolycodeApp.cpp
Examples/C++/ScreenSprites/: CMakeLists.txt  HelloPolycodeApp.cpp
Examples/C++/SkeletalAnimation/: CMakeLists.txt  HelloPolycodeApp.cpp
IDE/Contents/: CMakeLists.txt
IDE/Contents/Include/: EditorGrid.h  EntityEditorPropertyView.h  EntityEditorTreeView.h  ExampleBrowserWindow.h  ExportProjectWindow.h  NewFileWindow.h  NewProjectWindow.h  PolycodeClipboard.h  PolycodeConsole.h  PolycodeEditor.h  PolycodeEditorManager.h  PolycodeEntityEditor.h  PolycodeFontEditor.h  PolycodeFrame.h  PolycodeGlobals.h  PolycodeIDEApp.h  PolycodeImageEditor.h  PolycodeMaterialEditor.h  PolycodeMeshEditor.h  PolycodeProject.h  PolycodeProjectBrowser.h  PolycodeProjectEditor.h  PolycodeProjectManager.h  PolycodeProps.h  PolycodeRemoteDebugger.h  PolycodeScreenEditor.h  PolycodeSpriteEditor.h  PolycodeTextEditor.h  PolycodeToolLauncher.h  SettingsWindow.h  TextureBrowser.h  ToolWindows.h  TrackballCamera.h  TransformGizmo.h
IDE/Contents/Source/: EditorGrid.cpp  EntityEditorPropertyView.cpp  EntityEditorTreeView.cpp  ExampleBrowserWindow.cpp  ExportProjectWindow.cpp  NewFileWindow.cpp  NewProjectWindow.cpp  PolycodeClipboard.cpp  PolycodeConsole.cpp  PolycodeEditor.cpp  PolycodeEditorManager.cpp  PolycodeEntityEditor.cpp  PolycodeFontEditor.cpp  PolycodeFrame.cpp  PolycodeIDEApp.cpp  PolycodeImageEditor.cpp  PolycodeMaterialEditor.cpp  PolycodeMeshEditor.cpp  PolycodeProject.cpp  PolycodeProjectBrowser.cpp  PolycodeProjectEditor.cpp  PolycodeProjectManager.cpp  PolycodeProps.cpp  PolycodeRemoteDebugger.cpp  PolycodeScreenEditor.cpp  PolycodeSpriteEditor.cpp  PolycodeTextEditor.cpp  PolycodeToolLauncher.cpp  SettingsWindow.cpp  TextureBrowser.cpp  ToolWindows.cpp  TrackballCamera.cpp  TransformGizmo.cpp
Modules/: CMakeLists.txt
Modules/Bindings/: CMakeLists.txt
Modules/Bindings/2DPhysics/: CMakeLists.txt
Modules/Bindings/3DPhysics/: CMakeLists.txt
Modules/Bindings/UI/: CMakeLists.txt
Modules/Contents/: CMakeLists.txt
Modules/Contents/2DPhysics/: CMakeLists.txt
Modules/Contents/3DPhysics/: CMakeLists.txt
Modules/Contents/Awesomium/: PolycodeWebView.cpp  PolycodeWebView.h
Modules/Contents/Curl/: PolycodeDownloader.cpp  PolycodeDownloader.h
Modules/Contents/Kinect/: CMakeLists.txt
Modules/Contents/Networking/: CMakeLists.txt
Modules/Contents/OculusVR/: PolycodeOVR.cpp  PolycodeOVR.h
Player/Contents/: CMakeLists.txt
Standalone/: CMakeLists.txt
Tools/: CMakeLists.txt
Tools/Contents/: CMakeLists.txt
(+1892 files in other folders)
