FIND_PACKAGE(OpenGL REQUIRED)

IF(POLYCODE_EXTERNAL_PNG)
	INCLUDE(ExternalPNG)
ELSE()
	FIND_PACKAGE(PNG REQUIRED)
ENDIF(POLYCODE_EXTERNAL_PNG)

IF(POLYCODE_EXTERNAL_PHYSFS)
	INCLUDE(ExternalPhysFS)
ELSE()
	FIND_PACKAGE(PhysFS REQUIRED)
ENDIF(POLYCODE_EXTERNAL_PHYSFS)

IF(POLYCODE_EXTERNAL_OPENAL)
	INCLUDE(ExternalOpenAL)
ELSE()
	FIND_PACKAGE(OpenAL REQUIRED)
ENDIF(POLYCODE_EXTERNAL_OPENAL)

IF(POLYCODE_EXTERNAL_FREETYPE)
	INCLUDE(ExternalFreetype)
ELSE()
	FIND_PACKAGE(Freetype REQUIRED)
ENDIF(POLYCODE_EXTERNAL_FREETYPE)

IF(POLYCODE_EXTERNAL_VORBISFILE)
	INCLUDE(ExternalVorbisFile)
ELSE()
	FIND_PACKAGE(VorbisFile REQUIRED)
ENDIF(POLYCODE_EXTERNAL_VORBISFILE)

# Use SDL on non-Apple unixes
IF(UNIX AND NOT APPLE)
    FIND_PACKAGE(SDL REQUIRED)
ENDIF(UNIX AND NOT APPLE)

FIND_LIBRARY(VORBISFILE_LIBRARY NAMES vorbisfile)

# platform specific defines and include directories for win and sdl
IF(MSVC)
    ADD_DEFINITIONS(/D_UNICODE /DUNICODE)
    INCLUDE_DIRECTORIES(${PolyCode_SOURCE_DIR}/Core/Build/MSVC/Polycore)
ELSEIF(APPLE)
    ADD_DEFINITIONS(-DGL_GLEXT_PROTOTYPES)
ELSE(MSVC)
    ADD_DEFINITIONS(-DGL_GLEXT_PROTOTYPES)
    INCLUDE_DIRECTORIES(${PolyCode_SOURCE_DIR}/Core/Build/Linux)
ENDIF(MSVC)

# Set up common include directories
INCLUDE_DIRECTORIES(
    ${PolyCode_SOURCE_DIR}/Core/Contents/Include
    ${OPENGL_INCLUDE_DIR}
    ${OPENAL_INCLUDE_DIR}
    ${FREETYPE_INCLUDE_DIRS}
)

ADD_SUBDIRECTORY(Contents)
