FIND_PACKAGE(OpenGL REQUIRED)

IF(POLYCODE_EXTERNAL_PNG)
	INCLUDE(ExternalPNG)
ELSE()
	FIND_PACKAGE(PNG REQUIRED)
ENDIF(POLYCODE_EXTERNAL_PNG)

IF(POLYCODE_EXTERNAL_PHYSFS)
	INCLUDE(ExternalPhysFS)
ELSE()
	FIND_PACKAGE(PhysFS REQUIRED)
ENDIF(POLYCODE_EXTERNAL_PHYSFS)

IF(POLYCODE_EXTERNAL_OPENAL)
	INCLUDE(ExternalOpenAL)
ELSE()
	FIND_PACKAGE(OpenAL REQUIRED)
ENDIF(POLYCODE_EXTERNAL_OPENAL)

IF(POLYCODE_EXTERNAL_FREETYPE)
	INCLUDE(ExternalFreetype)
ELSE()
	FIND_PACKAGE(Freetype REQUIRED)
ENDIF(POLYCODE_EXTERNAL_FREETYPE)

IF(POLYCODE_EXTERNAL_VORBISFILE)
	INCLUDE(ExternalVorbisFile)
ELSE()
	FIND_PACKAGE(VorbisFile REQUIRED)
ENDIF(POLYCODE_EXTERNAL_VORBISFILE)

# Use SDL on non-Apple unixes
IF(UNIX AND NOT APPLE)
    FIND_PACKAGE(SDL REQUIRED)
ENDIF(UNIX AND NOT APPLE)

# Get missing GL headers for Windows
IF(MSVC)
    FILE(DOWNLOAD 
        http://www.opengl.org/registry/api/glext.h 
        ${CMAKE_CURRENT_BINARY_DIR}/Dependencies/opengl/include/GL/glext.h)
    FILE(DOWNLOAD 
        http://www.opengl.org/registry/api/wglext.h
        ${CMAKE_CURRENT_BINARY_DIR}/Dependencies/opengl/include/GL/wglext.h)
    SET(OPENGLEXT_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}/Dependencies/opengl/include)
ENDIF(MSVC)

ADD_SUBDIRECTORY(Contents)
